--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 /* Common styles for both mobile and desktop */
-.body {
-  background-color: #c2fbd7;
-  color: rgb(0, 0, 0);
+html,
+body {
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  min-width: 100vw;
+  border: 0;
+  box-sizing: border-box;
+  color: #7c7a7a;
   margin: auto;
   width: 50%;
   padding: 10px;
@@ -23,13 +30,13 @@
 }
 
 .button-53 {
-  background-color: #c2fbd7;
+  background-color: #930000;
   border-radius: 100px;
   box-shadow: rgba(44, 187, 99, 0.2) 0 -25px 18px -14px inset,
-    rgba(44, 187, 99, 0.15) 0 1px 2px, rgba(44, 187, 99, 0.15) 0 2px 4px,
-    rgba(44, 187, 99, 0.15) 0 4px 8px, rgba(44, 187, 99, 0.15) 0 8px 16px,
-    rgba(44, 187, 99, 0.15) 0 16px 32px;
-  color: green;
+    rgba(147, 0, 0, 1) 0 1px 2px, rgba(147, 0, 0, 1) 0 2px 4px,
+    rgba(147, 0, 0, 1) 0 4px 8px, rgba(147, 0, 0, 1) 0 8px 10px,
+    rgba(147, 0, 0, 1) 0 1px 502px;
+  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
@@ -45,9 +52,9 @@
 }
 
 .button-53:hover {
-  box-shadow: rgba(44, 187, 99, 0.35) 0 -25px 18px -14px inset,
-    rgba(44, 187, 99, 0.25) 0 1px 2px, rgba(44, 187, 99, 0.25) 0 2px 4px,
-    rgba(44, 187, 99, 0.25) 0 4px 8px, rgba(44, 187, 99, 0.25) 0 8px 16px,
-    rgba(44, 187, 99, 0.25) 0 16px 32px;
+  box-shadow: rgba(147, 0, 0, 20) 0 -25px 18px -14px inset,
+    rgba(147, 0, 0, 1) 0 1px 2px, rgba(147, 0, 0, 1) 0 2px 4px,
+    rgba(147, 0, 0, 1) 0 4px 8px, rgba(147, 0, 0, 1) 0 8px 16px,
+    rgba(147, 0, 0, 1) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
 }
