--- a/src/index.css
+++ b/src/index.css
@@ -4,30 +4,44 @@ body {
   background-color: #000000;
   margin: 0;
   padding: 0;
+  margin-top: 20px;
   min-height: 100vh;
   min-width: 100vw;
+  font-size: 25px;
   border: 0;
   box-sizing: border-box;
   color: #7c7a7a;
-  margin: auto;
-  width: 50%;
-  padding: 10px;
+
+  display: flex;
+  flex-direction: column; /* Stack content vertically */
+  align-items: center; /* Center horizontally */
+  overflow-x: hidden;
 }
 
-/* Media query for screens smaller than 600px (mobile) */
-@media (max-width: 600px) {
+@media screen and (max-width: 320px) {
+  /* comes into effect for screens less than or equal to 320 pixels */
   .body {
-    width: 100%; /* Take up full width on smaller screens */
-    padding: 5px; /* Smaller padding for mobile */
+    width: 110px;
+    height: 100vh;
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 321px) and (max-width: 480px) {
+  /* comes into effect for screens between 321 and 480 pixels (inclusive) */
+  .body {
+    width: 310px;
+    height: 100vh;
+    font-size: 10px;
+  }
+}
+@media screen and (min-width: 481px) {
+  /* comes into effect for screens larger than or equal to 481 pixels */
+  .body {
+    width: 490px;
   }
 }
 
 /* Media query for screens larger than 600px (desktop) */
-@media (min-width: 601px) {
-  .body {
-    font-size: 18px; /* Larger font size for desktop */
-  }
-}
 
 .button-53 {
   background-color: #930000;
@@ -50,7 +64,15 @@ body {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+.drop-53 {
+  background-color: #000000;
 
+  color: #7c7a7a;
+  cursor: pointer;
+  display: inline-block;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  padding: 0px 0px;
+}
 .button-53:hover {
   box-shadow: rgba(147, 0, 0, 20) 0 -25px 18px -14px inset,
     rgba(147, 0, 0, 1) 0 1px 2px, rgba(147, 0, 0, 1) 0 2px 4px,
